Fix CentOS name and add FreeBSD artifacts

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -163,7 +163,7 @@
                                 <td align="center">@OSX108_RELEASE_SHA1@ (<a
                                         href="@OSX108_RELEASE@.sha1">SHA1</a>)</td>
                             </tr>
-		                    <tr>
+                            <tr>
                                 <td><a href="@OSX108_DEBUG@"><img
                                         src="images/bf_c++_mac_10_8.png"
                                         alt="OS X 10.8 C++ Debug binaries"
@@ -172,6 +172,26 @@
                                 <td>@OSX108_DEBUG_BASE@</td>
                                 <td align="center">@OSX108_DEBUG_SHA1@ (<a
                                         href="@OSX108_DEBUG@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@FREEBSD_RELEASE@"><img
+                                        src="images/bf_c++_mac_10_8.png"
+                                        alt="FreeBSD C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@FREEBSD_RELEASE_SIZE@</td>
+                                <td>@FREEBSD_RELEASE_BASE@</td>
+                                <td align="center">@FREEBSD_RELEASE_SHA1@ (<a
+                                        href="@FREEBSD_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@FREEBSD_DEBUG@"><img
+                                        src="images/bf_c++_mac_10_8.png"
+                                        alt="FreeBSD C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@FREEBSD_DEBUG_SIZE@</td>
+                                <td>@FREEBSD_DEBUG_BASE@</td>
+                                <td align="center">@FREEBSD_DEBUG_SHA1@ (<a
+                                        href="@FREEBSD_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
                         </tbody>
                     </table>
