Expand unsupported versions table with 10.10

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -153,10 +153,10 @@
                                 <th width="150">File Name</th>
                                 <th width="125">SHA1 Checksum</th>
                             </tr>
-		                     <tr>
+                            <tr>
                                 <td><a href="@OSX108_RELEASE@"><img
                                         src="images/bf_c++_mac_10_8.png"
-                                        alt="OS X 10.8 C++ binaries"
+                                        alt="OS X 10.8 C++ Release binaries"
                                      /></a></td>
                                 <td align="center">@OSX108_RELEASE_SIZE@</td>
                                 <td>@OSX108_RELEASE_BASE@</td>
@@ -172,6 +172,26 @@
                                 <td>@OSX108_DEBUG_BASE@</td>
                                 <td align="center">@OSX108_DEBUG_SHA1@ (<a
                                         href="@OSX108_DEBUG@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@OSX1010_RELEASE@"><img
+                                        src="images/bf_c++_mac_10_8.png"
+                                        alt="OS X 10.10 C++ Release binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1010_RELEASE_SIZE@</td>
+                                <td>@OSX1010_RELEASE_BASE@</td>
+                                <td align="center">@OSX1010_RELEASE_SHA1@ (<a
+                                        href="@OSX1010_RELEASE@.sha1">SHA1</a>)</td>
+                            </tr>
+                            <tr>
+                                <td><a href="@OSX1010_DEBUG@"><img
+                                        src="images/bf_c++_mac_10_8.png"
+                                        alt="OS X 10.10 C++ Debug binaries"
+                                     /></a></td>
+                                <td align="center">@OSX1010_DEBUG_SIZE@</td>
+                                <td>@OSX1010_DEBUG_BASE@</td>
+                                <td align="center">@OSX1010_DEBUG_SHA1@ (<a
+                                        href="@OSX1010_DEBUG@.sha1">SHA1</a>)</td>
                             </tr>
                             <tr>
                                 <td><a href="@FREEBSD_RELEASE@"><img
