--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -70,13 +70,13 @@
                     </strong></p>
                 <ul>
                     <li>
-                        <p>Full documentation is available as <a
+                        <p>Full Bio-Formats documentation is available as <a
                                 href="@DOC_URL@">web documentation</a> or <a
                                 href="@DOC@">PDF documentation</a>.</p>
                     </li>
                     <li>
-                        <p>Documentation on how to build Bio-Formats C++ from source  is available to read on the web <a
-                                href="@DOC_URL@/developers/cpp.html">here</a>.</p>
+                        <p>Documentation for the native Bio-Formats C++ interface is available to read on the web <a
+                                href="@DOC_URL@/developers/cpp/overview.html">starting here</a>.</p>
                     </li>
                 </ul>
                 <h2><a name="supported" id="supported"></a>Supported platforms</h2>
@@ -112,6 +112,23 @@
                         </tbody>
                     </table>
                 </div>
+                <ul>
+                    <li>
+                        <p>These releases are built against a specific
+                            platform release and therefore should
+                            always work with the specified platform 
+                            release.</p>
+                    </li>
+                    <li>
+                        <p>Unsupported platforms are packages which may be
+                            updated such that the release build
+                            no longer works, or that rely on additional
+                            third-party packages. Therefore we cannot
+                            guarantee these specific binary builds will be
+                            usable in the future or on your particular set-up.
+                            See the <a href="#unsupported">Unsupported platforms</a> section below.</p>
+                    </li>
+                </ul>
                 <h2><a name="api" id="api"></a>Bio-Formats C++ API
                     documentation</h2>
                 <div class="alt-table">
@@ -143,6 +160,55 @@
                             to read on the web <a href="api/">here</a>.</p>
                     </li>
                 </ul>
+                <h2><a name="code" id="code"></a>Source code</h2>
+                <div class="alt-table">
+                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats Code">
+                        <tbody>
+                            <tr>
+                                <th width="269">Source Code</th>
+                                <th width="91">Size</th>
+                                <th width="270">File Name</th>
+                                <th width="120">Checksum</th>
+                            </tr>
+                            <tr>
+                                <td><a href="@SOURCE_CODE@" target="_blank"><img
+                                        src="images/bf_source_code.png"
+                                        alt="Zipped Source Code" /></a></td>
+                                <td align="center">@SOURCE_CODE_SIZE@</td>
+                                <td>@SOURCE_CODE_BASE@</td>
+                                <td align="center">@SOURCE_CODE_SHA1@ (<a
+                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="alt-table">
+                    <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
+                        <tbody>
+                            <tr>
+                                <th width="264">Source Code Links</th>
+                            </tr>
+                            <tr>
+                                <td><a
+                                        href="http://github.com/openmicroscopy/bioformats"
+                                        target="_blank"><img
+                                        src="images/bf_gh_repo.png"
+                                        alt="GitHub Repository Link" /></a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="http://git.openmicroscopy.org/"
+                                        target="_blank"><img
+                                        src="images/bf_gh_web.png"
+                                        alt="Gitweb Interface Link" /></a></td>
+                            </tr>
+                            <tr>
+                                <td><a href="@TAG_URL@" target="_blank"><img
+                                        src="images/bf_gh_tag.png"
+                                        alt="GitHub Tag" /></a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
                 <h2><a name="unsupported" id="unsupported"></a>Unsupported platforms</h2>
                 <div class="alt-table">
                     <table width="800" border="0" cellpadding="5" summary="Unsupported versions">
@@ -216,55 +282,16 @@
                         </tbody>
                     </table>
                 </div>
-                <h2><a name="code" id="code"></a>Source code</h2>
-                <div class="alt-table">
-                    <table width="800" border="0" cellpadding="5" summary="Bio-Formats Code">
-                        <tbody>
-                            <tr>
-                                <th width="269">Source Code</th>
-                                <th width="91">Size</th>
-                                <th width="270">File Name</th>
-                                <th width="120">Checksum</th>
-                            </tr>
-                            <tr>
-                                <td><a href="@SOURCE_CODE@" target="_blank"><img
-                                        src="images/bf_source_code.png"
-                                        alt="Zipped Source Code" /></a></td>
-                                <td align="center">@SOURCE_CODE_SIZE@</td>
-                                <td>@SOURCE_CODE_BASE@</td>
-                                <td align="center">@SOURCE_CODE_SHA1@ (<a
-                                        href="@SOURCE_CODE@.sha1">SHA1</a>)</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="alt-table">
-                    <table width="278" border="0" cellpadding="5" summary="Bio-Formats Code links">
-                        <tbody>
-                            <tr>
-                                <th width="264">Source Code Links</th>
-                            </tr>
-                            <tr>
-                                <td><a
-                                        href="http://github.com/openmicroscopy/bioformats"
-                                        target="_blank"><img
-                                        src="images/bf_gh_repo.png"
-                                        alt="GitHub Repository Link" /></a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="http://git.openmicroscopy.org/"
-                                        target="_blank"><img
-                                        src="images/bf_gh_web.png"
-                                        alt="Gitweb Interface Link" /></a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="@TAG_URL@" target="_blank"><img
-                                        src="images/bf_gh_tag.png"
-                                        alt="GitHub Tag" /></a></td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
+                <ul>
+                    <li>
+                        <p>Binary builds for unsupported platforms are not
+                            guaranteed to work for your individual set-up or
+                            if the platform package is updated after they were
+                            produced. However, you should be able to build
+                            your own binaries to work on all these operating
+                            systems.</p>
+                    </li>
+                </ul>
                 <h2><a name="previous" id="previous"></a>Previous versions</h2>
                 <ul>
                     <li>
