Use Ubuntu 14.04 artifacts as the supported version

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -89,24 +89,24 @@
                                 <th width="125">SHA1 Checksum</th>
                             </tr>
 		                     <tr>
-                                <td><a href="@CENTOS65_RELEASE@"><img
+                                <td><a href="@UBUNTU1404_RELEASE@"><img
                                         src="images/bf_c++_centos_6_5.png"
-                                        alt="CentOS 6.5 C++ Release binaries"
+                                        alt="Ubuntu 14.04 C++ Release binaries"
                                      /></a></td>
-                                <td align="center">@CENTOS65_RELEASE_SIZE@</td>
-                                <td>@CENTOS65_RELEASE_BASE@</td>
-                                <td align="center">@CENTOS65_RELEASE_SHA1@ (<a
-                                        href="@CENTOS65_RELEASE@.sha1">SHA1</a>)</td>
+                                <td align="center">@UBUNTU1404_RELEASE_SIZE@</td>
+                                <td>@UBUNTU1404_RELEASE_BASE@</td>
+                                <td align="center">@UBUNTU1404_RELEASE_SHA1@ (<a
+                                        href="@UBUNTU1404_RELEASE@.sha1">SHA1</a>)</td>
                              </tr>
 		                     <tr>
-                                <td><a href="@CENTOS65_DEBUG@"><img
+                                <td><a href="@UBUNTU1404_DEBUG@"><img
                                         src="images/bf_c++_centos_6_5.png"
-                                        alt="CentOS 6.5 C++ Debug binaries"
+                                        alt="Ubuntu 14.04 C++ Debug binaries"
                                      /></a></td>
-                                <td align="center">@CENTOS65_DEBUG_SIZE@</td>
-                                <td>@CENTOS65_DEBUG_BASE@</td>
-                                <td align="center">@CENTOS65_DEBUG_SHA1@ (<a
-                                        href="@CENTOS65_DEBUG@.sha1">SHA1</a>)</td>
+                                <td align="center">@UBUNTU1404_DEBUG_SIZE@</td>
+                                <td>@UBUNTU1404_DEBUG_BASE@</td>
+                                <td align="center">@UBUNTU1404_DEBUG_SHA1@ (<a
+                                        href="@UBUNTU1404_DEBUG@.sha1">SHA1</a>)</td>
                              </tr>
                         </tbody>
                     </table>
