--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -123,12 +123,12 @@
                             <a href="artifacts">here</a> for platforms which
 							may be updated such that the release build
                             no longer works, or that rely on additional
-                            third-party packages. Therefore we cannot
-                            guarantee these specific binary builds will be
-                            usable in the future or on your particular set-up.
-							However, you should be able to build
-                            your own binaries to work on all these operating
-                            systems.</p
+                            third-party packages. We cannot guarantee these
+                            specific binary builds will be usable in the
+                            future or on your particular set-up. However, you
+                            should be able to build your own binaries to work
+                            on operating systems which meet the requirements
+                            covered in the documentation.</p
                     </li>
                 </ul>
                 <h2><a name="api" id="api"></a>Bio-Formats C++ API
