--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -60,7 +60,8 @@
                 allowing developers to prepare their code for the future
                 public release and is <b>used at your own risk</b>. The Model
                 and API are still subject to change at this stage.
-                <p>
+                </div>
+                <div style="background-color: #F5A9A9; margin-left: 20px; margin-right: 20px; margin-bottom: 20px; margin-top: 20px; padding-bottom: 8px; padding-left: 8px; padding-right: 8px; padding-top: 8px;">
                 <b>NOTE</b><br/>
                 The following builds are provided for testing
                 purposes.  They were known to work when built for this
