Reword unsupported C++ build notes

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -234,8 +234,8 @@
 			   incompatibly in the future, causing the
 			   build no longer work. We cannot guarantee
 			   these specific binary builds will be usable
-			   in the future as the required dependencies
-			   change over time.</p>
+			   as these required dependencies change over
+			   time.</p>
                     </li>
                     <li>
                         <p>We also provide builds for CentOS which
