Add separator to C++ download top links

--- a/bf_cpp_downloads.html
+++ b/bf_cpp_downloads.html
@@ -68,7 +68,7 @@
                             >Supported builds</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#unsupported"
                             >Unsupported builds</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#api"
                             >API</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
-                            href="#code">Code</a><a
+                            href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a
                             href="#previous">Previous versions</a>
                     </strong></p>
                 <ul>
