--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -510,7 +510,8 @@
                 <ul>
                     <li>
                         <p>All components available for this version of OMERO
-                            are available <a href="artifacts">here</a></p>
+                            are available <a href="artifacts/?C=N;O=A">here</a>
+                        </p>
                     </li>
                 </ul>
                 <h2><a name="previous" id="previous"></a>Previous versions</h2>
@@ -531,7 +532,7 @@
                 ><!-- --></div>
             <div id="portal-footer">
                 <p>
-                    <acronym title="Copyright">&copy;</acronym> 2000-2014
+                    <acronym title="Copyright">&copy;</acronym> 2000-2015
                     University of Dundee &amp; Open Microscopy Environment. <a
                         href="http://www.openmicroscopy.org/site/about/licensing-attribution/licensing"
                         >Creative Commons Attribution 3.0 Unported License</a>
