--- a/webtagging_downloads.html
+++ b/webtagging_downloads.html
@@ -56,9 +56,10 @@
                 <h2>OMERO.webtagging @VERSION@</h2>
                 <ul>
                     <li>
-                        <p>Information on this release of OMERO.webtagging is in
-                            the <a href="@ANNOUNCEMENT_URL@">release
-                                announcement</a>. </p>
+                        <p>This release is not backwards compatible because of
+                            underlying changes to OMERO.web. Please use
+                            version 1.1.0 on OMERO server instances less than
+                            5.1. </p>
                     </li>
 
                     <li>
