--- a/mtools_downloads.html
+++ b/mtools_downloads.html
@@ -70,7 +70,7 @@
                         compatibility with an OMERO 5.0 server, earlier
                         versions are available from the main <a
                                 href="http://downloads.openmicroscopy.org/mtools/?C=M;O=D"
-                                >downloads folder</a>. <p></li>
+                                >downloads folder</a>. </p></li>
                     <li><p>Choose the version of OMERO.mtools for your platform
                             (Windows/Mac) below.</p></li>
                     <li><p>Ensure you have the correct MCR (MATLAB Compiler
