--- a/omerova_downloads.html
+++ b/omerova_downloads.html
@@ -96,9 +96,10 @@
                             OMERO server on your local machine </p>
                     </li>
                     <li>
-                        <p>Instructions for using the Virtual Appliance are at:
-                                <a href="@DOC_URL@/users/virtual-appliance.html"
-                                >Virtual Appliance</a></p>
+                        <p>See the <a
+                            href="@DOC_URL@/users/virtual-appliance.html"
+                                >Virtual Appliance user guide</a> for
+                           installation instructions</p>
                     </li>
                 </ul>
                 <h2><a name="code" id="code"></a>Checking out the code</h2>
