Remove previous downloads section

--- a/omerova_downloads.html
+++ b/omerova_downloads.html
@@ -57,7 +57,7 @@
                 <h2>OMERO @VERSION@ Virtual Appliance Downloads</h2>
                     <p><strong>
                         <a href="#va" >Virtual Appliance</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-                        <a href="#previous">Previous versions</a>
+                        <a href="#code">Code</a>&nbsp;&nbsp;|&nbsp;&nbsp;
                     </strong></p>
                 <ul>
                     <li>
@@ -131,17 +131,6 @@
                         </tbody>
                     </table>
                 </div>
-                <h2><a name="previous" id="previous"></a>Previous versions</h2>
-                <ul>
-                    <li>
-                        <p>We recommend that you always use the most recent
-                            release version of the OMERO software, but if you
-                            need to use a previous version, they are all
-                            available from the main <a
-                                href="http://downloads.openmicroscopy.org/omero-virtual-appliance/?C=M;O=D"
-                                >downloads folder</a></p>
-                    </li>
-                </ul>
             </div><!-- /.entry-content -->
 
             <!-- OME Footer - Start -->
