--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -93,7 +93,7 @@
                             apply for an <a
                                 href="http://qa.openmicroscopy.org.uk/registry/demo_account/"
                                 >account on our Demo server</a> or download the
-                                <a href="http://www.downloads.openmicroscopy.org/latest/omero-virtual-appliance">Virtual Appliance</a> to install
+                                <a href="latest/omero-virtual-appliance">Virtual Appliance</a> to install
                             your own version locally.</p>
                     </li>
                 </ul>
