--- a/flimfit_downloads.html
+++ b/flimfit_downloads.html
@@ -100,6 +100,14 @@
                                 General Public License</a> for more details.
                         </p>
                     </li>
+                    
+                    <li>
+                        <p>See the <a href="https://www.openmicroscopy.org/site/products/partner/flimfit">FLIMfit product page</a>
+                            for further details and links to <a href="https://www.openmicroscopy.org/site/support/partner/flimfit">documentation</a>
+                            and a <a href="http://help.openmicroscopy.org/flimfit.html">help guide/tutorial</a>
+                            for using FLIMfit with OMERO.
+                        </p>
+                    </li>
                 </ul>
                 <h2><a name="flimfit_51" id="flimfit_51"></a>FLIMfit downloads
                     for OMERO 5.1.x</h2>
@@ -125,7 +133,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@FLIMFIT_51_WIN@"><img
-                                        src="images/flimfit_win.png"
+                                        src="images/flimfit_windows.png"
                                         alt="Windows Client Download"
                                      /></a></td>
                                 <td align="center">@FLIMFIT_51_WIN_SIZE@</td>
@@ -171,7 +179,7 @@
                                 <td><a
                                         href="https://github.com/openmicroscopy/Imperial-FLIMFit"
                                         target="_blank"><img
-                                        src="images/github_rep_link.png"
+                                        src="images/github_repository.png"
                                         alt="GitHub Repository Link" /></a></td>
                             </tr>
                         </tbody>
