updating buttons on OMERO & VA download pages

--- a/omero_downloads.html
+++ b/omero_downloads.html
@@ -110,7 +110,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@WIN_INSIGHT@"><img
-                                        src="images/windows_download.png"
+                                        src="images/omero_windows.png"
                                         alt="Windows Insight Download"
                                      /></a></td>
                                 <td align="center">@WIN_INSIGHT_SIZE@</td>
@@ -120,7 +120,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MAC_JAVA7+_INSIGHT@"><img
-                                        src="images/mac_download_java7.png"
+                                        src="images/omero_mac_java7.png"
                                         alt="Mac OS X (Java 7+) Insight Download"
                                      /></a></td>
                                 <td align="center">@MAC_JAVA7+_INSIGHT_SIZE@</td>
@@ -130,7 +130,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MAC_JAVA6_INSIGHT@"><img
-                                        src="images/mac_download_java6.png"
+                                        src="images/omero_mac_java6.png"
                                         alt="Mac OS X Insight Download"
                                      /></a></td>
                                 <td align="center">@MAC_JAVA6_INSIGHT_SIZE@</td>
@@ -140,7 +140,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@LINUX_INSIGHT@"><img
-                                        src="images/linux_download.png"
+                                        src="images/omero_linux.png"
                                         alt="Linux Insight Download" /></a></td>
                                 <td align="center">@LINUX_INSIGHT_SIZE@</td>
                                 <td>@LINUX_INSIGHT_BASE@</td>
@@ -186,7 +186,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@IJ_CLIENTS@"><img
-                                        src="images/imagej_download.png"
+                                        src="images/plugin_imagej_fiji.png"
                                         alt="ImageJ-Fuji Plugin Download"
                                      /></a></td>
                                 <td align="center">@IJ_CLIENTS_SIZE@</td>
@@ -196,7 +196,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@MATLAB_CLIENTS@"><img
-                                        src="images/matlab_download.png"
+                                        src="images/plugin_matlab.png"
                                         alt="Matlab Plugin Download" /></a></td>
                                 <td align="center">@MATLAB_CLIENTS_SIZE@</td>
                                 <td>@MATLAB_CLIENTS_BASE@</td>
@@ -314,7 +314,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@DOCS@"><img
-                                        src="images/api_download.png"
+                                        src="images/omero_api_doc.png"
                                         alt="API Documentation Download"
                                      /></a></td>
                                 <td align="center">@DOCS_SIZE@</td>
@@ -348,7 +348,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON34@"><img
-                                        src="images/python_3_4.png"
+                                        src="images/ice_python_3_4.png"
                                         alt="Ice 3.4 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON34_SIZE@</td>
@@ -358,7 +358,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@PYTHON35@"><img
-                                        src="images/python_3_5.png"
+                                        src="images/ice_python_3_5.png"
                                         alt="Ice 3.5 Python Download"
                                      /></a></td>
                                 <td align="center">@PYTHON35_SIZE@</td>
@@ -392,7 +392,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@JAVA35@"><img
-                                        src="images/java_3_5.png"
+                                        src="images/ice_java_3_5.png"
                                         alt="Ice 3.5 Java Download"
                                      /></a></td>
                                 <td align="center">@JAVA35_SIZE@</td>
@@ -415,7 +415,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@SOURCE_CODE@" target="_blank"><img
-                                        src="images/ome_source_code.png"
+                                        src="images/omero_source_code.png"
                                         alt="Zipped Source Code" /></a></td>
                                 <td align="center">@SOURCE_CODE_SIZE@</td>
                                 <td>@SOURCE_CODE_BASE@</td>
@@ -435,13 +435,13 @@
                                 <td><a
                                         href="http://github.com/openmicroscopy/openmicroscopy"
                                         target="_blank"><img
-                                        src="images/github_rep_link.png"
+                                        src="images/github_repository.png"
                                         alt="GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
                                 <td><a href="http://git.openmicroscopy.org/"
                                         target="_blank"><img
-                                        src="images/gitweb_int_link.png"
+                                        src="images/gitweb_interface.png"
                                         alt="Gitweb Interface Link" /></a></td>
                             </tr>
                             <tr>
