--- a/omerova_downloads.html
+++ b/omerova_downloads.html
@@ -79,7 +79,7 @@
                             </tr>
                             <tr>
                                 <td><a href="@VM@"><img
-                                        src="images/virtual_app_download.png"
+                                        src="images/omero_virtual_appliance.png"
                                         alt="Virtual Appliance Download"
                                      /></a></td>
                                 <td align="center">@VM_SIZE@</td>
@@ -114,13 +114,13 @@
                                 <td><a
                                         href="http://github.com/openmicroscopy/openmicroscopy"
                                         target="_blank"><img
-                                        src="images/github_rep_link.png"
+                                        src="images/github_repository.png"
                                         alt="GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
                                 <td><a href="http://git.openmicroscopy.org/"
                                         target="_blank"><img
-                                        src="images/gitweb_int_link.png"
+                                        src="images/gitweb_interface.png"
                                         alt="Gitweb Interface Link" /></a></td>
                             </tr>
                             <tr>
