--- a/bf_downloads.html
+++ b/bf_downloads.html
@@ -365,7 +365,7 @@
                                         alt="GitHub Repository Link" /></a></td>
                             </tr>
                             <tr>
-                                <td><a href="http://git.openmicroscopy.org/"
+                                <td><a href="http://git.openmicroscopy.org/?p=bioformats.git"
                                         target="_blank"><img
                                         src="images/gitweb_interface.png"
                                         alt="Gitweb Interface Link" /></a></td>
